# clarion

./: .codecov.yml  .dockerignore  .gitignore  .python-version  CAPABILITIES_ROADMAP.md  COMPLETION_SUMMARY.md  DOCUMENTATION_REVIEW.md  Dockerfile  FINAL_SETUP.md  FRONTEND_TROUBLESHOOTING.md  GITHUB_SECRETS_SETUP.md  LICENSE  Makefile  ONE_WEEK_MVP_PLAN.md  PRIORITIZED_ROADMAP.md  PROJECT_ROADMAP.md  QUICK_START.md  REACT_FRONTEND.md  README.md  README_API.md  README_DEPLOYMENT.md  SETUP_CHECKLIST.md  SETUP_OPTIONAL_FEATURES.md  STORAGE_AND_LAB.md  TEST_RESULTS.md  docker-compose.dev.yml  docker-compose.microservices.yml  docker-compose.vault.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
archive/: ADMIN_CONTROL_AND_HIERARCHY.md  DOCUMENTATION_CONSOLIDATION.md  FINAL_SETUP.md  IMPLEMENTATION_SUMMARY.md  PROJECT_PLAN.md  PROJECT_ROADMAP.md  REACT_FRONTEND.md  STORAGE_AND_LAB.md  TESTING_SETUP.md  TEST_RESULTS.md
certs/: .gitignore
collector/: .gitignore  COMPLETENESS_CHECK.md  Dockerfile  MISSING_FEATURES.md  README.md  SCALABILITY.md  TESTING.md  docker-compose.yml  requirements.txt
docs/: ADMIN_GUIDE.md  AI_ENHANCED_ARCHITECTURE.md  AI_INTEGRATION.md  CATEGORIZATION_ENGINE.md  CATEGORIZATION_ENGINE_REVIEW.md  CLUSTERING_AND_GROUPING.md  CLUSTER_ASSIGNMENT_WORKFLOW.md  CONNECTOR_MANAGEMENT.md  DATA_ARCHITECTURE.md  DATA_COLLECTION_AND_RECOMMENDATIONS.md  DATA_STRATEGY.md  DEPLOYMENT_ARCHITECTURE.md  DESIGN.md  DEVICE_IDENTITY_FIELDS.md  IMPLEMENTATION_REQUIREMENTS.md  ISE_INTEGRATION.md  ISE_PXGRID_SUMMARY.md  ISE_SGT_ASSIGNMENT.md  MICROSERVICES_ARCHITECTURE.md  PRODUCTION_READINESS.md  PROJECT_PLAN.md  TESTING.md  TOPOLOGY_ARCHITECTURE.md  TOPOLOGY_EXAMPLES.md  UI_MENU_STRUCTURE.md  USER_DATABASE_IMPLEMENTATION.md  VAULT_INTEGRATION.md  pxgridsample.rtf
edge/: Dockerfile  iox-app.yaml  requirements.txt
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
lab/: CML_LAB_SETUP.md  ISE_CONFIGURATION.md  README.md  VM_ARCHITECTURE.md  build_switch_graph.py  check_status.sh  cleanup_vm.sh  generate_fake_ad.py  generate_fake_ise.py  setup_vm.sh  vm_agent_setup.sh  vm_netflow_sender.sh
scripts/: add_sample_users.py  aggregate_user_traffic.py  demo_workflow.sh  generate_explanations.py  load_data_to_db.py  load_flows_to_db.py  migrate_secrets_to_vault.py  populate_mvp_features.py  populate_sgts_from_clusters.py  run_api.py  (+12 more)
(+242 files in other folders)
