[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarion"
version = "0.1.0"
description = "TrustSec Policy Copilot - Intelligent network visibility and policy design"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Steven Gerhart" }
]
keywords = ["trustsec", "cisco", "network", "security", "sgt", "sgacl", "policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
]

[project.scripts]
clarion = "clarion.cli:app"

[project.urls]
Homepage = "https://github.com/sgerhart/clarion"
Repository = "https://github.com/sgerhart/clarion"
Documentation = "https://github.com/sgerhart/clarion/blob/main/docs/DESIGN.md"

[tool.hatch.build.targets.wheel]
packages = ["src/clarion"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["clarion"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "duckdb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

